...
      ),
      children: [
        _buildHeaderCell("Level"),
        _buildHeaderCell("Points"),
        _buildHeaderCell("Recharge"),
        _buildHeaderCell("Daily Diamonds"),
        _buildHeaderCell("Room Protection"),
        _buildHeaderCell("Friend Hide"),
        _buildHeaderCell("Temp / CP Lock"),
        _buildHeaderCell("Validity"),
      ],
    );
  }
...
